methods.picture.PatternPicture.scala.error
Compilation error:
PatternPicture:3: error: ';' expected but ',' found.
def pattern () {avance(),marquer(Color.Red),avance();marquer(Color.Blue);avance();gauche();avance();marquer(Color.Blue);avance();marquer(Color.Green);avance();gauche();marquer(Color.Green);avance();marquer(Color.Yellow);avance();gauche();avance();marquer(Color.Yellow);avance();marquer(Color.Red);avance();gauche()}
                        ^